# android_study

./: .gitignore  README  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
AndroidRunCpp/: build.sh
ELFReader/: CMakeLists.txt  _elf.h  elf.h  header.h  main.cpp  readme.md
app/: build.gradle.kts
app/rs/: Cargo.toml  build_rs.bat  build_rs.sh
app/rs/src/: lib.rs
app/src/androidTest/java/com/android/: ExampleInstrumentedTest.java
app/src/androidTest/java/thouger/study/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  IORelocator.cpp  IORelocator.h  binder.c  binder.h  binder_client.c  hunter.cpp  hunter.h  mynative.cpp  mynative.h  mynative_copy.cpp
app/src/main/cpp/MapHide/: hide.cpp  hide.h  pmparser.h  wrap.cpp  wrap.h
app/src/main/cpp/SeccompSVC/: library.cpp  library.h
app/src/main/cpp/Utils/: mylog.h
app/src/main/cpp/dlfcn/: local_dlfcn.h
app/src/main/cpp/hello/: CMakeLists.txt  hello.cpp
app/src/main/cpp/inlineHook/: hook_open.js
app/src/main/cpp/netlink/: bionic_netlink.cpp  bionic_netlink.h  syscall64.s
app/src/main/cpp/other/: CMakeLists.txt
app/src/main/cpp/xhook/: xh_elf.c
app/src/main/java/com/android/study/: ChooseUtils.kt  ClassInfo.kt  DetectVirtualApps.kt  MainActivity.kt  MyBroadcastReceiver.kt  fileUtils.kt  test.kt  useRust.kt
app/src/main/java/com/android/study/hunter/: IXposedHookLoadPackage.java  IXposedMod.java  XC_MethodHook.java  XC_MethodReplacement.java  XposedBridge.java  XposedHelpers.java  XposedInit.java  package-info.java
app/src/main/java/com/android/study/hunter/callbacks/: IXUnhook.java  XC_LoadPackage.java  XCallback.java  package-info.java
app/src/main/java/com/android/study/hunter/services/: BaseService.java  FileResult.java  package-info.java
app/src/main/java/com/android/study/lang3/: ArrayUtils.java  ClassUtils.java  JavaVersion.java  StringUtils.java  SystemUtils.java
app/src/main/java/com/android/study/lang3/reflect/: MemberUtils.java
app/src/main/java/com/android/study/utils/: FileUtils.kt  GsonUtils.kt  ThreadUtils.kt  ToastUtils.kt
app/src/main/java/thouger/study/: ChooseUtils.kt  ClassInfo.kt  DetectVirtualApps.kt  Device_Fingerprinting.kt  Hook_test.kt  MainActivity.kt  fileUtils.kt  test.kt  useRust.kt
app/src/main/java/thouger/study/hunter/: IXposedHookLoadPackage.java  IXposedMod.java  XC_MethodHook.java  XC_MethodReplacement.java  XposedBridge.java  XposedHelpers.java  XposedInit.java  package-info.java
app/src/main/java/thouger/study/hunter/callbacks/: IXUnhook.java  XC_LoadPackage.java  XCallback.java  package-info.java
app/src/main/java/thouger/study/hunter/services/: BaseService.java  FileResult.java  package-info.java
app/src/main/java/thouger/study/lang3/: ArrayUtils.java  ClassUtils.java  JavaVersion.java  StringUtils.java  SystemUtils.java
app/src/main/java/thouger/study/lang3/reflect/: MemberUtils.java
app/src/main/java/thouger/study/utils/: FileUtils.kt  GsonUtils.kt  ThreadUtils.kt  ToastUtils.kt
app/src/main/jni/: Android.mk  Application.mk  main.c  main2.cpp  native.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/thouger/study/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hook/: build.gradle.kts
hook/src/androidTest/java/com/hook/: ExampleInstrumentedTest.java
hook/src/androidTest/java/thouger/hook/: ExampleInstrumentedTest.kt
hook/src/main/: AndroidManifest.xml  CMakeLists.txt
hook/src/main/assets/: native_init  xposed_init
hook/src/main/cpp/: CMakeLists.txt  logging.h  native-lib.cpp
hook/src/main/cpp/hello/: CMakeLists.txt  hello.cpp
hook/src/main/cpp/native_hook/: CMakeLists.txt  native_hook.cpp  native_hook.h
hook/src/main/cpp/other/: CMakeLists.txt  other.cpp
hook/src/main/java/com/hook/: MainActivity.java  hook.java  hook_aaid.java  hook_java.java
hook/src/main/java/thouger/hook/: MainActivity.kt  android.os.SystemProperties.native_get  hook.kt  hook_aaid.java  hook_copy.kt  hook_java.java
hook/src/main/res/values/: themes.xml
hook/src/main/res/values-night/: themes.xml
hook/src/test/java/com/hook/: ExampleUnitTest.java
hook/src/test/java/thouger/hook/: ExampleUnitTest.kt
nativeLib/: build.gradle.kts
nativeLib/src/main/cpp/: CMakeLists.txt
nativeLib/src/main/cpp/adapter/: CMakeLists.txt
nativeLib/src/main/cpp/dlfc/: dlfcn_compat.cpp  dlfcn_nougat.cpp  elf_util.cpp
nativeLib/src/main/cpp/hook/: CMakeLists.txt  HookUtils.cpp
nativeLib/src/main/cpp/hook/Dobby/source/InterceptRouting/Routing/FunctionInlineHook/: FunctionInlineHook.cc
nativeLib/src/main/cpp/hook/signhook/: CMakeLists.txt
nativeLib/src/main/cpp/hook/signhook/exts/vixl/: CMakeLists.txt
nativeLib/src/main/cpp/hook/xhook/: CMakeLists.txt  xh_elf.c  xh_jni.c  xh_log.c  xh_util.c  xh_version.c  xhook.c
nativeLib/src/main/cpp/include/: allInclude.h  dlfcn_compat.h  parse.h  stringUtils.h
nativeLib/src/main/cpp/includes/: HookUtils.h  JnitraceForC.h  ZhenxiLog.h  allInclude.h  appUtils.h  fileUtils.h  invokePrintf.h  mapItemInfo.h  mylibc.h  stringHandler.h
nativeLib/src/main/cpp/libpath/: libpath.cpp
nativeLib/src/main/cpp/mmkv/: CMakeLists.txt  MMKVLog.h  MMKV_Android.cpp  MMKV_IO.h  MemoryFile_Android.cpp
nativeLib/src/main/cpp/utils/: CMakeLists.txt  appUtils.cpp  fileUtils.cpp  parse.cpp  stringUtils.cpp
nativeLib/src/main/cpp/utils/hookutils/: HookClassUtils.cpp  JnitraceForC.cpp  invokePrintf.cpp  stringHandler.cpp
nativelib/src/main/cpp/dlfc/: CMakeLists.txt  dlfcn_nougat.cpp
nativelib/src/main/cpp/hook/: HookUtils.cpp
nativelib/src/main/cpp/includes/: JnitraceForC.h  ZhenxiLog.h  allInclude.h  appUtils.h  elf_util.h  fileUtils.h  invokePrintf.h  stringHandler.h
nativelib/src/main/cpp/libpath/: CMakeLists.txt
nativelib/src/main/cpp/mmkv/: MMKV.cpp  MMKV_Android.cpp
ptrace-seccomp-demo/: Makefile  arm64_seccomp.h  arm_seccomp_ptrace.cpp  tuziseccomp
(+6 files in other folders)
